crates/oxvg_actions/src/actions/snapshots/oxvg_actions__actions__clipboard__test__paste.snap
---
source: crates/oxvg_actions/src/actions/clipboard.rs
expression: actor.root.serialize().unwrap()
---
<svg xmlns="http://www.w3.org/2000/svg" xmlns:oxvg="https://oxvg.noahwbaldwin.me"><g><g/></g><oxvg:state><oxvg:history><oxvg:action oxvg:id="Select"><oxvg:arg>g</oxvg:arg></oxvg:action><oxvg:action oxvg:id="Copy"/><oxvg:action oxvg:id="Paste"/></oxvg:history><oxvg:selection oxvg:ids="3"/><oxvg:clipboard><g/></oxvg:clipboard></oxvg:state></svg>
